# qcdn

./: .env.development  .gitignore  Cargo.toml  Design.md  Entities.md  Readme.md  Setup.md  build.rs  diesel.toml
filestore_proto/: Cargo.toml  build.rs
filestore_proto/proto/qcdn/: files.proto  general.proto  nodes.proto
filestore_proto/src/: lib.rs
filestore_server/: Cargo.toml  design.md
filestore_server/migrations/: 20231223202810_dir_n_file.up.sql
filestore_server/src/: app_state.rs  config.rs  main.rs  storage.rs
filestore_server/src/database/: connection.rs  mod.rs
filestore_server/src/web/: mod.rs
filestore_server/src/web/router/: http.rs
migrations/: 20231223202810_dir_n_file.down.sql  20231223202810_dir_n_file.up.sql  20231223202810_file.down.sql  20231223202810_file.up.sql
migrations/20231223202810_file/: up.sql
old/: Cargo.toml  build.rs
old/src/: config.rs  lib.rs  storage.rs
old/src/database/: connection.rs  utils.rs
old/src/database/files/: file_type.rs  mod.rs  sync.rs
old/src/database/files/records/: dir_record.rs  file_record.rs  file_version_record.rs
old/src/database/files/search/: file_version_search.rs  mod.rs
old/src/entities/: Entities.md
old/src/entities/files/: mod.rs  upload_state.rs
old/src/grpc/: mod.rs
old/src/grpc/server/: files.rs  general.rs  mod.rs
old/src/web/router/: mod.rs
proto/: qcdn.proto
proto/qcdn/: file.proto  files.proto  general.proto  nodes.proto
run/: manager.sh  test.sh
src/: app_state.rs  config.rs  lib.rs  storage.rs
src/database/: mod.rs
src/database/files/: debug.sql  dir.rs  file_record.rs  file_search.rs  file_type.rs  file_version_record.rs  mod.rs
src/database/files/records/: file_version_tag_record.rs  mod.rs
src/database/files/search/: dir_search.rs  file_search.rs
src/entities/: Entities.md
src/entities/files/: mod.rs
src/grpc/server/: files.rs  general.rs  mod.rs  nodes.rs
src/web/: mod.rs
