[workspace]
resolver = "2"
members = ["packages/*"]

[workspace.dependencies]
dotenvy = { version = "0.15.7", features = ["clap"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"
axum = "0.7.4"
clap = { version = "4.5.1", features = ["derive", "env"] }
color-eyre = { version = "0.6.2", features = ["url", "issue-url"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
serde = { version = "1.0.196", features = ["derive"] }
tonic = { version = "0.11.0", features = ["channel"] }
tonic-build = "0.11.0"
tonic-types = "0.11.0"
tonic-health = "0.11.0"
prost = "0.12.3"
prost-types = "0.12.3"
