[workspace]
resolver = "2"
members = ["packages/*"]

[workspace.dependencies]
dotenvy = { version = "0.15.7", features = ["clap"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.10", features = ["codec", "io"] }
futures = "0.3.30"
clap = { version = "4.5.2", features = ["derive", "env"] }
color-eyre = { version = "0.6.2", features = ["url", "issue-url"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
tonic = { version = "0.11.0", features = ["channel"] }
tonic-build = "0.11.0"
tonic-types = "0.11.0"
tonic-health = "0.11.0"
prost = "0.12.3"
prost-types = "0.12.3"
chrono = { version = "0.4.35", features = ["serde"] }
file-format = { version = "0.24.0", features = ["reader"] }
