[workspace]
resolver = "2"
members = ["packages/*"]

[workspace.dependencies]
dotenvy = { version = "0.15.7", features = ["clap"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
tokio-util = { version = "0.7.12", features = ["codec", "io"] }
futures = "0.3.30"
clap = { version = "4.5.18", features = ["derive", "env"] }
color-eyre = { version = "0.6.3", features = ["url", "issue-url"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
tonic = { version = "0.12.2", features = ["channel"] }
tonic-build = "0.12.2"
tonic-types = "0.12.2"
tonic-health = "0.12.2"
prost = "0.13.3"
prost-types = "0.13.3"
chrono = { version = "0.4.38", features = ["serde"] }
file-format = { version = "0.25.0", features = ["reader"] }
