[package]
name = "filestore_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
clap = { version = "4.4.11", features = ["derive", "env"] }
sqlx = { version = "0.7.3", features = [
  "runtime-tokio",
  "sqlite",
  "macros",
  "migrate",
  "chrono",
] }
chrono = { version = "0.4.31", features = ["serde"] }
listenfd = "1.0.1"
axum = "0.7.2"
axum-macros = "0.4.0"
axum-htmx = "0.5.0"
tower-http = { version = "0.5.0", features = ["trace", "cors"] }
