[package]
name = "qcdn"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"
axum = "0.7.4"
axum-macros = "0.4.1"
axum-htmx = "0.5.0"
tower-http = { version = "0.5.1", features = ["trace", "cors"] }
anyhow = "1.0.79"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
clap = { version = "4.5.0", features = ["derive", "env"] }
sqlx = { version = "0.7.3", features = [
  "runtime-tokio",
  "sqlite",
  "macros",
  "migrate",
] }
chrono = { version = "0.4.34", features = ["serde"] }
listenfd = "1.0.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tonic = { version = "0.11.0", features = ["channel"] }
tonic-build = "0.11.0"
tonic-types = "0.11.0"
tonic-health = "0.11.0"
prost = "0.12.3"
prost-types = "0.12.3"
uuid = { version = "1.7.0", features = ["serde", "v7"] }
async-channel = "2.2.0"
tokio-util = { version = "0.7.10", features = ["codec", "io"] }

[build-dependencies]
tonic-build = "0.11.0"
